--- a/qr-code-component-main/code/index.html
+++ b/qr-code-component-main/code/index.html
@@ -8,22 +8,16 @@
   <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  <div class="main">
+    <img src="/qr-code-component-main/images/image-qr-code.png" alt="QR code">
+    <h2>Improve your front-end skills by building projects</h2>
+  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/codeBloom361">Sania Saleem</a>.
+    Coded by <a href="#">Sania Saleem</a>.
   </div>
 </body>
 </html>
