--- a/qr-code-component-main/code/index.html
+++ b/qr-code-component-main/code/index.html
@@ -12,12 +12,14 @@
 <body>
   <div class="main">
     <img src="/qr-code-component-main/images/image-qr-code.png" alt="QR code">
-    <h2>Improve your front-end skills by building projects</h2>
+    <h1>Improve your front-end skills by building projects</h1>
   <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
+  <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Sania Saleem</a>.
   </div>
+</footer>
 </body>
 </html>
