--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
+  <main>
   <div class="main">
     <img src="./image-qr-code.png" alt="QR code">
     <h1>Improve your front-end skills by building projects</h1>
   <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
+</main>
   <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
